Test/git-issues/git-issue-1963b.dfy.expect
git-issue-1963b.dfy(12,15): Error: in refining a datatype, the '...' replaces the '=' token and everything up to a left brace starting the declaration of the body; only members of the body may be changed in a datatype refinement
1 parse errors detected in git-issue-1963b.dfy
